# simple-solution

./: README.md  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
service/: Dockerfile  requirements.txt
service/service/: settings.py  urls.py  views.py
service/unit/: admin.py  models.py  urls.py  utils.py  views.py
service/unit/api/: routes.py
service/unit/templates/unit/: index.html
